k8s/fcg-infra-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fcg-infra
  labels:
    environment: development
