k8s/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-deployment
  namespace: fcg-infra
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:latest
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-data
              mountPath: /loki
      volumes:
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki-pvc
