k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: fcg-infra
  labels:
    app: rabbitmq
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
      nodePort: 31572
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 31672
