k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  namespace: fcg-infra
  labels:
    app: sqlserver
spec:
  type: NodePort
  selector:
    app: sqlserver
  ports:
    - name: mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
      nodePort: 31433
